--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/web": "^9.7.4",
     "next": "14.2.5",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
